post fontsize:  14px->15px

--- a/_config.yml
+++ b/_config.yml
@@ -30,3 +30,13 @@ extBaidu: true
 # 数学公式支持，比较影响加载速度,不需要请设置为false
 extMath: false
 
+plugins:
+  - 'jekyll-toc'
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "mypost"
+      toc: true
